# traffic-service

./: .gitignore  AGENTS.md  CLAUDE.md  DOCUMENTATION.md  PLAN.md  PROJECT.md  PROJECT_CHECKLIST.md  README.md  REPORT.md  docker-compose.yml  frontend-improvements.md  package-lock.json  package.json  report.tex  ruff.toml
services/conflict-detection-service/: Dockerfile  README.md  pyproject.toml
services/conflict-detection-service/src/: consumer.py  dependencies.py  events.py  main.py  outbox_relay.py  schemas.py
services/conflict-detection-service/src/application/: conflict_service.py  interfaces.py  use_cases.py
services/conflict-detection-service/src/domain/: assessment.py  outbox_event.py  processed_event.py  reservation.py  route.py
services/conflict-detection-service/src/infrastructure/: database.py  dependencies.py
services/conflict-detection-service/src/models/: __init__.py  outbox_event.py  processed_event.py  road_segment.py  route.py  segment_reservation.py
services/conflict-detection-service/src/routes/: reservations.py  utilization.py
services/conflict-detection-service/src/services/: conflict.py
services/conflict-detection-service/tests/: test_conflict_service.py  test_domain.py  test_use_cases.py
services/routes-service/: Dockerfile  README.md  pyproject.toml
services/routes-service/src/: main.py  schemas.py
services/routes-service/src/application/: interfaces.py  use_cases.py
services/routes-service/src/domain/: __init__.py  route.py  segment.py
services/routes-service/tests/: test_domain.py  test_segments.py  test_use_cases.py
(+220 files in other folders)
