[project]
name = "conflict-detection-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.48",
    "uvicorn",
]
